# PisSystem

./: Makefile  build.cfg  my.diff  my2.diff  my3.diff  mymain.diff  sunzhguy_prj.rar  sunzhguy_superstring.rar
src/: CMakeLists.txt  main.c  main.h  udp_service.c  udp_service.h
src/dev_manage/: dias_broadcast_rule_c  dias_broadcast_rule_h
src/driver/: adenc.c  adenc.h  aenc.c  aenc.h  gpio.c  gpio.h  led.c  led.h  soundcard.c  soundcard.h  systime.c  systime.h
src/evio/: CMakeLists.txt  evio.c  evio.h
src/hash/: CMakeLists.txt  shash.c  shash.h
src/include/: commnanomsg.h  general.h  pis_config.h
src/lib/: file_operator.c  file_operator.h  ini_file.c  ini_file.h  kring_buffer.c  kring_buffer.h  pis_pack.c  pis_pack.h  utils.c  utils.h
src/manage/: broadcast.c  broadcast.h  dev_master.c  dev_master.h  dev_status.c  dev_status.h  dias_broadcast_rule.c  dias_broadcast_rule.h  ioinput_manage.c  ioinput_manage.h  mp3_decoder.c  mp3_decoder.h  sys_service.c  sys_service.h  train_manage.c  train_manage.h
src/mini-heap/: CMakeLists.txt  mini-heap.c  mini-heap.h
src/nanomsg/: CMakeLists.txt
src/net/: CMakeLists.txt  evnet.c  evnet.h
src/operate_device/: occ.c  occ.h  pisc.c  pisc.h  tms.c  tms.h
src/port_layer/: audio_port_bd.c  audio_port_bd.h  ctrl_udport.c  ctrl_udport.h  fep_audio_port.c  fep_audio_port.h
src/process_matrix/: pis_datproc_matrix.c  pis_datproc_matrix.h
src/teminal_device/: dias.c  dias.h  head_led.c  head_led.h  lcu_led.c  lcu_led.h  pisc_local.c  pisc_local.h
src/timer/: CMakeLists.txt  evtimer.c  evtimer.h
testdata/: out.pcm  (+1 more)
(+7 files in other folders)
